{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 72,
  "lineage": "54e47320-8ca4-4d2d-9a3d-2aa7c846fbdc",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0eef3b81da6cc956f",
            "domain": "vpc",
            "id": "eipalloc-045ea3e553fc1a95f",
            "instance": "i-02a0115172467b23a",
            "network_interface": "eni-01b8026ef1a8a65e1",
            "private_dns": "ip-10-0-0-133.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.133",
            "public_dns": "ec2-18-140-43-115.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.43.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-81c5aa7d",
            "domain": "vpc",
            "id": "eipalloc-0867bed9e215559e3",
            "network_interface": "eni-052c46fc622bd5303",
            "private_dns": "ip-10-0-0-163.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.163",
            "public_dns": "ec2-52-220-235-173.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.235.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.nat"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_elb",
      "name": "webapp_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:485418931031:loadbalancer/demo-webapp-elb",
            "availability_zones": [
              "ap-southeast-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "demo-webapp-elb-1275048149.ap-southeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "demo-webapp-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0511a82f73c35fa89",
              "i-051d5e448810bc6d2",
              "i-054a5a281d4b5cc5a",
              "i-07b42292769b363c1"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "demo-webapp-elb",
            "security_groups": [
              "sg-09a07e8741486ef30"
            ],
            "source_security_group": "485418931031/demo_webapp_http_inbound",
            "source_security_group_id": "sg-09a07e8741486ef30",
            "subnets": [
              "subnet-00f38ee2d5a5be37d"
            ],
            "tags": {
              "Name": "terraform_elb"
            },
            "zone_id": "Z1LMS91P8CMLE5"
          }
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-fa08bc99",
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:instance/i-02a0115172467b23a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a0115172467b23a",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "Anggit",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b8026ef1a8a65e1",
            "private_dns": "ip-10-0-0-133.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.133",
            "public_dns": "ec2-18-140-43-115.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.43.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cd790aa9f9a3bb18",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f38ee2d5a5be37d",
            "tags": {
              "Name": "terraform_bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e52d513ff2137582"
            ]
          }
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_subnet_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-fa08bc99",
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:instance/i-0bf05009c5534cfdd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf05009c5534cfdd",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "Anggit",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a3aa2f9807975cf",
            "private_dns": "ip-10-0-1-242.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ffae36c77e96bd7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09757a3629f0da67e",
            "tags": {
              "Name": "terraform_demo_private_subnet"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b71cd112bea6661",
              "sg-085de000850f1d869"
            ]
          }
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0db8e977141ac359b",
            "owner_id": "485418931031",
            "tags": {
              "Name": "terraform_igw"
            },
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0867bed9e215559e3",
            "id": "nat-09c15f4de3fee312f",
            "network_interface_id": "eni-052c46fc622bd5303",
            "private_ip": "10.0.0.163",
            "public_ip": "52.220.235.173",
            "subnet_id": "subnet-00f38ee2d5a5be37d",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.demo_public"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07092e13e47a5480b",
            "owner_id": "485418931031",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-09c15f4de3fee312f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_private_subnet_route_table"
            },
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fb711005a5130f53",
            "owner_id": "485418931031",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db8e977141ac359b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_public_subnet_route_table"
            },
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015e7875a442c406c",
            "route_table_id": "rtb-07092e13e47a5480b",
            "subnet_id": "subnet-09757a3629f0da67e"
          },
          "depends_on": [
            "aws_route_table.demo_private",
            "aws_subnet.demo_private"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e7187ae9d186e85",
            "route_table_id": "rtb-0fb711005a5130f53",
            "subnet_id": "subnet-00f38ee2d5a5be37d"
          },
          "depends_on": [
            "aws_route_table.demo_public",
            "aws_subnet.demo_public"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_ssh_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:security-group/sg-0e52d513ff2137582",
            "description": "Allow SSH to Bastion host from approved ranges",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e52d513ff2137582",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_ssh",
            "name_prefix": null,
            "owner_id": "485418931031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_bastion_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:security-group/sg-0f055bdd7ce35f372",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f055bdd7ce35f372",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nat",
            "name_prefix": null,
            "owner_id": "485418931031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_from_bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:security-group/sg-085de000850f1d869",
            "description": "Allow SSH from Bastion host(s)",
            "egress": [],
            "id": "sg-085de000850f1d869",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e52d513ff2137582",
                  "sg-0f055bdd7ce35f372"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_from_bastion",
            "name_prefix": null,
            "owner_id": "485418931031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_ssh_from_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_security_group.bastion_ssh_sg",
            "aws_security_group.nat",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_access_from_nat_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:security-group/sg-05b71cd112bea6661",
            "description": "Allow web access to the private subnet from the public subnet (via NAT instance)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b71cd112bea6661",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_subnet_web_access",
            "name_prefix": null,
            "owner_id": "485418931031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_subnet.demo_public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_http_inbound_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:security-group/sg-09a07e8741486ef30",
            "description": "Allow HTTP from Anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a07e8741486ef30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo_webapp_http_inbound",
            "name_prefix": null,
            "owner_id": "485418931031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_demo_webapp_http_inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_outbound_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:security-group/sg-0b903f90dc3f4de6b",
            "description": "Allow outbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b903f90dc3f4de6b",
            "ingress": [],
            "name": "demo_webapp_outbound",
            "name_prefix": null,
            "owner_id": "485418931031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_demo_webapp_outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_ssh_inbound_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:security-group/sg-076c18ed31f19ef9f",
            "description": "Allow SSH from certain ranges",
            "egress": [],
            "id": "sg-076c18ed31f19ef9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo_webapp_ssh_inbound",
            "name_prefix": null,
            "owner_id": "485418931031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_demo_webapp_ssh_inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:subnet/subnet-09757a3629f0da67e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09757a3629f0da67e",
            "map_public_ip_on_launch": false,
            "owner_id": "485418931031",
            "tags": {
              "Name": "terraform_private_subnet"
            },
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:subnet/subnet-00f38ee2d5a5be37d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00f38ee2d5a5be37d",
            "map_public_ip_on_launch": false,
            "owner_id": "485418931031",
            "tags": {
              "Name": "terraform_public_subnet"
            },
            "vpc_id": "vpc-0c061d79513bebd62"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.site",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:485418931031:vpc/vpc-0c061d79513bebd62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057af1d43bc580f92",
            "default_route_table_id": "rtb-0d6abb8ffbcae717e",
            "default_security_group_id": "sg-0a39751937a905372",
            "dhcp_options_id": "dopt-735f9117",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c061d79513bebd62",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d6abb8ffbcae717e",
            "owner_id": "485418931031",
            "tags": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}